--- a/package.json
+++ b/package.json
@@ -15,19 +15,22 @@
   ],
   "scripts": {
     "build": "tsc -p .",
-    "example": "tsc -p example && babel example/**/*.jsx -d .",
+    "example": "webpack --config example/webpack.config.js",
     "lint": "tslint --project . && tslint --project example"
   },
   "devDependencies": {
-    "babel-cli": "^6.16.0",
+    "babel-core": "^6.17.0",
     "babel-helper-vue-jsx-merge-props": "^2.0.1",
+    "babel-loader": "^6.2.5",
     "babel-plugin-syntax-jsx": "^6.13.0",
     "babel-plugin-transform-vue-jsx": "^3.1.0",
     "babel-preset-latest": "^6.16.0",
+    "ts-loader": "^0.8.2",
     "tslint": "^3.15.1",
     "typescript": "^2.0.3",
     "vue": "^2.0.1",
-    "vue-class-component": "^4.0.1"
+    "vue-class-component": "^4.0.1",
+    "webpack": "^1.13.2"
   },
   "peerDependencies": {
     "vue": "^2.0.1"
