--- a/package.json
+++ b/package.json
@@ -19,20 +19,19 @@
     "lint": "tslint --project . && tslint --project example"
   },
   "devDependencies": {
-    "babel-core": "^6.17.0",
-    "babel-helper-vue-jsx-merge-props": "^2.0.1",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-syntax-jsx": "^6.13.0",
-    "babel-plugin-transform-vue-jsx": "^3.1.0",
-    "babel-preset-latest": "^6.16.0",
-    "ts-loader": "^0.8.2",
-    "tslint": "^3.15.1",
-    "typescript": "^2.0.3",
-    "vue": "^2.0.1",
-    "vue-class-component": "^4.0.1",
-    "webpack": "^1.13.2"
+    "babel-core": "^6.26.0",
+    "babel-helper-vue-jsx-merge-props": "^2.0.2",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-vue-jsx": "^3.5.0",
+    "babel-preset-env": "^1.6.0",
+    "ts-loader": "^2.3.7",
+    "tslint": "^5.7.0",
+    "typescript": "^2.5.3",
+    "vue": "^2.5.1",
+    "webpack": "^3.7.1"
   },
   "peerDependencies": {
-    "vue": "^2.0.1"
+    "vue": "^2.5.0"
   }
 }
