--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "target": "es6",
-    "module": "commonjs",
-    "noImplicitAny": true,
-    "strictNullChecks": true,
+    "target": "esnext",
+    "module": "es2015",
+    "moduleResolution": "node",
+    "strict": true,
     "noEmit": true
   },
   "include": [
